unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/breadwinner_ns__BW_Metadata__c.object-meta.xml
<CustomObject>
    <label>NetSuite Metadata</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>