unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/fields/breadwinner_ns__Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>