unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/fields/breadwinner_ns__CurrencyInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CurrencyInternalId__c</fullName>
    <label>Currency Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>