unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/fields/breadwinner_ns__InternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__InternalId__c</fullName>
    <label>Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>