unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/fields/breadwinner_ns__Parent__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>breadwinner_ns__BW_Metadata__c</referenceTo>
    <relationshipLabel>NetSuite Metadata</relationshipLabel>
    <relationshipName>BWMetadata</relationshipName>
    <type>Lookup</type>
</CustomField>