unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/fields/breadwinner_ns__ParentInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ParentInternalId__c</fullName>
    <description>For Price Book, it will store its parent Subscription Plan InternalId</description>
    <label>Parent Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>