unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/listViews/breadwinner_ns__NetSuite_Billing_Schedules.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Billing_Schedules</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__InternalId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__Metadata_Type__c</field>
        <operation>equals</operation>
        <value>BillingSchedule</value>
    </filters>
    <label>NetSuite Billing Schedules</label>
</ListView>