unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/listViews/breadwinner_ns__NetSuite_Classes.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Classes</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__Parent__c</columns>
    <columns>breadwinner_ns__IncludeChildren__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__Metadata_Type__c</field>
        <operation>equals</operation>
        <value>Class</value>
    </filters>
    <label>NetSuite Classes</label>
</ListView>