unpackaged/main/default/objects/breadwinner_ns__BW_Metadata__c/listViews/breadwinner_ns__NetSuite_Price_Books.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Price_Books</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__CurrencyInternalId__c</columns>
    <columns>breadwinner_ns__ParentInternalId__c</columns>
    <columns>breadwinner_ns__InternalId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__Metadata_Type__c</field>
        <operation>equals</operation>
        <value>PriceBook</value>
    </filters>
    <label>NetSuite Price Books (Subscription Plan)</label>
</ListView>